--- a/ReservasGe.html
+++ b/ReservasGe.html
@@ -54,26 +54,30 @@
 					<thead>
 						<tr >
 							<th>ID</th>
+							<th>Detalles</th>
+							<th>Cantidad Productos</th>
+							<th>Tipo producto</th>
 							<th>Destinatario</th>
 							<th>Ciudad</th>
-                            <th>Fecha</th>
 							<th>Direccion</th>
-                            <th>Email</th>
-                            <th>Telefono</th>
-                            <th>Cantidad</th>
+							<th>Telefono</th>
+							<th>E-mail</th>
+							<th>Fecha Entrega</th>
 							<th>Edit/Delete</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Sindetalles</td>
+                            <td>50</td>
+                            <td>Tinte capilar</td>
+							<td>Johan CLiente</td>  
+							<td>Bogota</td>  
+							<td>Calle 25 #79-15</td>  
+                            <td>300265898</td>    
+                            <td>28/06/2022</td> 
+						    <td>usuario@gmail.com</td>   
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -81,13 +85,15 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Sindetalles</td>
+                            <td>89</td>
+                            <td>Tinte capilar</td>
+							<td>Laura CLiente</td>  
+							<td>Bogota</td>  
+							<td>Calle 25 #79-15</td>  
+                            <td>300265898</td>    
+                            <td>28/06/2022</td> 
+							<td>usuario@gmail.com</td>     
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -95,181 +101,111 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Sindetalles</td>
+                            <td>156</td>
+                            <td>Tinte capilar</td>
+							<td>Sebastias CLiente</td>  
+							<td>Monao</td>  
+							<td>Calle 25 #79-15</td>  
+                            <td>300265898</td>    
+                            <td>28/06/2022</td> 
+							<td>usuario@gmail.com</td>     
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>4</td>
+							<td>Sindetalles</td>
+                            <td>123</td>
+                            <td>Tinte capilar</td>
+							<td>Karol CLiente</td>  
+							<td>Bogota</td>  
+							<td>Calle 25 #79-15</td>  
+                            <td>300265898</td>    
+                            <td>28/06/2022</td> 
+							<td>usuario@gmail.com</td>     
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>5</td>
+							<td>Sindetalles</td>
+                            <td>46</td>
+                            <td>Tinte </td>
+							<td>Anderra CLiente</td>  
+							<td>Bucaramanga</td>  
+							<td>Calle 25 #79-15</td>  
+                            <td>300265898</td>    
+                            <td>28/06/2022</td> 
+							<td>usuario@gmail.com</td>     
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-                        <tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>6</td>
+							<td>Sindetalles</td>
+                            <td>40</td>
+                            <td>Tinte capilar</td>
+							<td>Felipe CLiente</td>  
+							<td>Santander</td>  
+							<td>Calle 25 #79-15</td>  
+                            <td>300265898</td>    
+                            <td>28/06/2022</td> 
+							<td>usuario@gmail.com</td>      
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>7</td>
+							<td>Sindetalles</td>
+                            <td>30</td>
+                            <td>Tinte capilar</td>
+							<td>Rodolfo CLiente</td>  
+							<td>Bogota</td>  
+							<td>Calle 25 #79-15</td>  
+                            <td>300265898</td>    
+                            <td>28/06/2022</td> 
+							<td>usuario@gmail.com</td>     
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>8</td>
+							<td>Sindetalles</td>
+                            <td>89/td>
+                            <td>Tinte</td>
+							<td>Ana CLiente</td>  
+							<td>Bogota</td>  
+							<td>Calle 25 #79-15</td>  
+                            <td>300265898</td>    
+                            <td>28/06/2022</td> 
+							<td>usuario@gmail.com</td>     
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
 						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-                        <tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-                        <tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>Bogota D.C</td>
-                            <td>20/02/2022</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>9</td>
+							<td>Sindetalles</td>
+                            <td>45</td>
+                            <td>Tinte capilar</td>
+							<td>JAndres CLiente</td>  
+							<td>Cali</td>  
+							<td>Calle 25 #79-15</td>  
+                            <td>300265898</td>    
+                            <td>28/06/2022</td>
+							<td>usuario@gmail.com</td>      
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
