--- a/ReservasGe2.html
+++ b/ReservasGe2.html
@@ -54,26 +54,28 @@
 					<thead>
 						<tr >
 							<th>ID</th>
-							<th>Producto</th>
-                            <th>Fecha</th>
-                            <th>Ubicacion</th>
+							<th>Tipo Objeto</th>
+							<th>Nombre Objeto</th>
+							<th>Cantidad Objeto</th>
+							<th>Fecha</th>
+							<th>Detalle</th>
+							<th>Nombre</th>
+							<th>Localidad</th>
 							<th>Direccion</th>
-                            <th>Email</th>
-                            <th>Telefono</th>
-                            <th>Cantidad</th>
 							<th>Edit/Delete</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
 							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>L-1</td>
+                            <td>Lapiz</td>
+                            <td>6</td>
+							<td>26/07/2022</td>
+							<td>Sin detalle</td>
+							<td>Andres Lora</td>
+							<td>Fontibon</td>
+							<td>cll 45 #79-15 losas</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -81,13 +83,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>L-1</td>
+                            <td>Lapiz</td>
+                            <td>6</td>
+							<td>26/07/2022</td>
+							<td>Sin detalle</td>
+							<td>Andres Lora</td>
+							<td>Fontibon</td>
+							<td>cll 45 #79-15 losas</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -95,13 +98,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>L-1</td>
+                            <td>Lapiz</td>
+                            <td>6</td>
+							<td>26/07/2022</td>
+							<td>Sin detalle</td>
+							<td>Andres Lora</td>
+							<td>Fontibon</td>
+							<td>cll 45 #79-15 losas</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -109,13 +113,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>L-1</td>
+                            <td>Lapiz</td>
+                            <td>6</td>
+							<td>26/07/2022</td>
+							<td>Sin detalle</td>
+							<td>Andres Lora</td>
+							<td>Fontibon</td>
+							<td>cll 45 #79-15 losas</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -123,13 +128,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>L-1</td>
+                            <td>Lapiz</td>
+                            <td>6</td>
+							<td>26/07/2022</td>
+							<td>Sin detalle</td>
+							<td>Andres Lora</td>
+							<td>Fontibon</td>
+							<td>cll 45 #79-15 losas</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -137,13 +143,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>L-1</td>
+                            <td>Lapiz</td>
+                            <td>6</td>
+							<td>26/07/2022</td>
+							<td>Sin detalle</td>
+							<td>Andres Lora</td>
+							<td>Fontibon</td>
+							<td>cll 45 #79-15 losas</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -151,13 +158,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>L-1</td>
+                            <td>Lapiz</td>
+                            <td>6</td>
+							<td>26/07/2022</td>
+							<td>Sin detalle</td>
+							<td>Andres Lora</td>
+							<td>Fontibon</td>
+							<td>cll 45 #79-15 losas</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -165,13 +173,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>L-1</td>
+                            <td>Lapiz</td>
+                            <td>6</td>
+							<td>26/07/2022</td>
+							<td>Sin detalle</td>
+							<td>Andres Lora</td>
+							<td>Fontibon</td>
+							<td>cll 45 #79-15 losas</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -179,97 +188,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-                        <tr>
-							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreProducto</td>
-                            <td>20/02/2022</td>
-                            <td>Ciudad Bolivar</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>L-1</td>
+                            <td>Lapiz</td>
+                            <td>6</td>
+							<td>26/07/2022</td>
+							<td>Sin detalle</td>
+							<td>Andres Lora</td>
+							<td>Fontibon</td>
+							<td>cll 45 #79-15 losas</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
