--- a/historialclienteReserva.html
+++ b/historialclienteReserva.html
@@ -50,20 +50,30 @@
 					<thead>
 						<tr >
 							<th>ID</th>
-							<th>NombreEmpresa</th>
+							<th>Tipo Reservas</th>
+							<th>Cantidad Productos</th>
+							<th>Tipo producto</th>
+							<th>Destinatario</th>
+							<th>Ciudad</th>
 							<th>Direccion</th>
-							<th>Localidad</th>
-							<th>Cantidad</th>
+							<th>Telefono</th>
+							<th>E-mail</th>
+							<th>Fecha Entrega</th>
 							<th>Edit/Delete</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr data-status="pendiente">
 							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
+							<td>Packing</td>
+							<td>123</td>
+							<td>Tinte capilar</td>
+							<td>Johan Cliente</td>
+							<td>Bogota</td>
+							<td>cll 15 #79-15 fr</td>
+							<td>3001254896</td>
+							<td>usuario56@gmail.com</td>
+							<td>26/06/2022</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -71,10 +81,15 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
+							<td>Material P.O.P</td>
+							<td>136</td>
+							<td>Cuadernos</td>
+							<td>Johan Cliente</td>
+							<td>Bogota</td>
+							<td>cll 15 #79-15 fr</td>
+							<td>3001254896</td>
+							<td>usuario56@gmail.com</td>
+							<td>24/06/2022</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -82,10 +97,15 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
+							<td>Packing</td>
+							<td>54</td>
+							<td>crema capilar</td>
+							<td>Johan Cliente</td>
+							<td>Bogota</td>
+							<td>cll 15 #79-15 fr</td>
+							<td>3001254896</td>
+							<td>usuario56@gmail.com</td>
+							<td>26/06/2022</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -93,10 +113,15 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
+							<td>Material P.O.P</td>
+							<td>85</td>
+							<td>Lapiz</td>
+							<td>Johan Cliente</td>
+							<td>Bogota</td>
+							<td>cll 15 #79-15 fr</td>
+							<td>3001254896</td>
+							<td>usuario56@gmail.com</td>
+							<td>26/06/2022</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -104,197 +129,15 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NomEmpresa</td>
-							<td>Ejemplo 24 #16-26</td>                        
-							<td>Chapinero</td>
-                            <td>200</td>
+							<td>Packing</td>
+							<td>69</td>
+							<td>Labial</td>
+							<td>Johan Cliente</td>
+							<td>Bogota</td>
+							<td>cll 15 #79-15 fr</td>
+							<td>3001254896</td>
+							<td>usuario56@gmail.com</td>
+							<td>28/06/2022</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
