--- a/inventariosGe.html
+++ b/inventariosGe.html
@@ -53,22 +53,20 @@
 					<thead>
 						<tr >
 							<th>ID</th>
-							<th>Nombre</th>
-							<th>Categoria</th>
-							<th>Marca</th>
-							<th>Fecha</th>
 							<th>Cantidad</th>
+							<th>Producto</th>
+							<th>Categoria</th>
+							<th>Fecha Entrada</th>
 							<th>Edit/Delete</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
 							<td>1</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
+							<td>22</td>
+							<td>Esmaltes</td>
+							<td>Cosmeticos</td>                        
 							<td>02/11/2022</td>
-                            <td>200</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -76,11 +74,10 @@
 						</tr>
 						<tr>
 							<td>2</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
+							<td>22</td>
+							<td>Labail</td>
+							<td>Cosmeticos</td>                        
 							<td>02/11/2022</td>
-                            <td>200</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -88,11 +85,10 @@
 						</tr>
 						<tr>
                             <td>3</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
+							<td>35</td>
+							<td>Crema</td>
+							<td>Cosmeticos</td>                        
 							<td>02/11/2022</td>
-                            <td>200</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -100,11 +96,10 @@
 						</tr>
 						<tr>
                             <td>4</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
+							<td>50</td>
+							<td>Esmalte</td>
+							<td>Cosmeticos</td>                        
 							<td>02/11/2022</td>
-                            <td>200</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -112,11 +107,10 @@
 						</tr>
 						<tr>
 							<td>5</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
+							<td>30</td>
+							<td>Removedor</td>
+							<td>Cosmeticos</td>                        
 							<td>02/11/2022</td>
-                            <td>200</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -124,11 +118,10 @@
 						</tr>
 						<tr>
 							<td>6</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
+							<td>45</td>
+							<td>Bloqueador solar</td>
+							<td>Protector solar</td>                        
 							<td>02/11/2022</td>
-                            <td>200</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -136,11 +129,10 @@
 						</tr>
 						<tr>
 							<td>7</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
+							<td>22</td>
+							<td>Desodorante</td>
+							<td>Cuidado personal</td>                        
 							<td>02/11/2022</td>
-                            <td>200</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -148,11 +140,10 @@
 						</tr>
 						<tr>
 							<td>8</td>
-                            <td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
+                            <td>22</td>
+							<td>Labail</td>
+							<td>Cosmeticos</td>                        
 							<td>02/11/2022</td>
-                            <td>200</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -160,11 +151,10 @@
 						</tr>
 						<tr>
 							<td>9</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
+							<td>36</td>
+							<td>Cremas</td>
+							<td>Cosmeticos</td>                        
 							<td>02/11/2022</td>
-                            <td>200</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -172,11 +162,10 @@
 						</tr>
 						<tr>
 							<td>10</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
+							<td>22</td>
+							<td>Crema dental</td>
+							<td>Cuidado personal</td>                        
 							<td>02/11/2022</td>
-                            <td>200</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -184,143 +173,10 @@
 						</tr>
 						<tr>
 							<td>11</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
-							<td>02/11/2022</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>12</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
-							<td>02/11/2022</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>13</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
-							<td>02/11/2022</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>14</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
-							<td>02/11/2022</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>15</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
-							<td>02/11/2022</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>16</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
-							<td>02/11/2022</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>17</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
-							<td>02/11/2022</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>18</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
-							<td>02/11/2022</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>19</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
-							<td>02/11/2022</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>20</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
-							<td>02/11/2022</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>21</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
-							<td>02/11/2022</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
 							<td>22</td>
-							<td>NomProducto</td>
-							<td>NomCategoria</td>
-							<td>NomMarca</td>                        
+							<td>Shampù</td>
+							<td>Cuidado personal</td>                        
 							<td>02/11/2022</td>
-                            <td>200</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
