--- a/reservas.html
+++ b/reservas.html
@@ -56,7 +56,7 @@
                         <form action="" method=""  id="formulario">
                             <div class="Flex">
                             <div class="form-control">
-                                <label for="usuario">Persona que resive</label>
+                                <label for="usuario">Destinatario</label>
                                 <input id="usuario" type="text" onkeypress="return soloLetras(event)" >
                                 <p></p>                
                             </div>
@@ -107,7 +107,7 @@
                         </div>
                 
                             <div class="form-control">
-                                <label for="Observacion">Observacion</label>
+                                <label for="Observacion">Detalles</label>
                                 <input id="Observacion" type="Observacion">
                                 <p></p>                
                             </div>
