--- a/vistaAdministrador.html
+++ b/vistaAdministrador.html
@@ -44,7 +44,7 @@
                  <div class="anidados03"><h4>Eventos</h4> <a href="eventos.html" class="a"><img class="ims" src="img/Event.png" alt="" width="200"></a></div>
                  <div class="anidados04"><h4>Reservas</h4><a href="reservasLogin.html" class="a"><img class="ims" src="img/reserva.png" alt="" width="200"></a> </div>
                  <div class="anidados05"><h4>proveedores</h4> <a href="proveedores.html" class="a"><img class="ims" src="img/proveedor.png" alt="" width="200"></a></div>
-                 <div class="anidados06"><h4>Clientes</h4> <a href="clientes.html" class=""> <img class="ims" src="img/usu.png" alt="" width="200"></a></div>
+                 <div class="anidados06"><h4>Usuarios</h4> <a href="clientes.html" class=""> <img class="ims" src="img/usu.png" alt="" width="200"></a></div>
             </div>
         </div>
     </main>
