--- a/eventos.html
+++ b/eventos.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="/script/tablas.js"></script>
+	<!-- <script src="script/tablas.js"></script> -->
 	<script src="https://kit.fontawesome.com/1d159cd404.js" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -23,6 +23,7 @@
             <ul class="list-main-nav">
                 <li class="nav-item"><a href="vistaAdministrador.html">Inicio</a></li>
                 <li class="nav-item"><a href="eventos.html">Eventos</a></li> 
+                <li class="nav-item"><a href="contrato.html">Contrato</a></li> 
 				<a href="index.html" class="icons-nav">
 					<i class="fa-solid fa-right-to-bracket"></i>
 				</a> 
@@ -53,26 +54,28 @@
 					<thead>
 						<tr >
 							<th>ID</th>
-							<th>Nombres</th>
-							<th>Fecha</th>
-                            <th>Ubicacion</th>
-							<th>Direccion</th>
-                            <th>Email</th>
-                            <th>Telefono</th>
-                            <th>Cantidad</th>
+							<th>Nombre Evento</th>
+							<th>Tipo Evento</th>
+                            <th>Detalles</th>
+							<th>Descripcion</th>
+                            <th>Direccion Evento</th>
+                            <th>Numero Local</th>
+							<th>Telefono</th>
+							<th>Email</th>
 							<th>Edit/Delete</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Avon</td>
+                            <td>Preserntacion de marca</td>
+							<td>Sin detalle</td>
+							<td>Entregar a recepciones</td>  
+                            <td>calle 20 70 #-30 prr</td>                     
+							<td>2</td>
+							<td>20045698</td>
+							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -80,13 +83,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Nike</td>
+                            <td>Preserntacion de marca</td>
+							<td>Sin detalle</td>
+							<td>Entregar a recepciones</td>  
+                            <td>calle 20 70 #-30 prr</td>                      
+							<td>2</td>
+							<td>20045698</td>
+							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -94,13 +98,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Avon</td>
+                            <td>Preserntacion de marca</td>
+							<td>Sin detalle</td>
+							<td>Entregar a recepciones</td>  
+                            <td>calle 20 70 #-30 prr</td>                      
+							<td>2</td>
+							<td>20045698</td>
+							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -108,13 +113,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Avon</td>
+                            <td>Preserntacion de marca</td>
+							<td>Sin detalle</td>
+							<td>Entregar a recepciones</td>  
+                            <td>calle 20 70 #-30 prr</td>                      
+							<td>2</td>
+							<td>20045698</td>
+							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -122,13 +128,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Pantene</td>
+                            <td>Preserntacion de marca</td>
+							<td>Sin detalle</td>
+							<td>Entregar a recepciones</td>  
+                            <td>calle 20 70 #-30 prr</td>                      
+							<td>2</td>
+							<td>20045698</td>
+							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -136,13 +143,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Mac</td>
+                            <td>Preserntacion de marca</td>
+							<td>Sin detalle</td>
+							<td>Entregar a recepciones</td>  
+                            <td>calle 20 70 #-30 prr</td>                      
+							<td>2</td>
+							<td>20045698</td>
+							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -150,13 +158,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Nike</td>
+                            <td>Preserntacion de marca</td>
+							<td>Sin detalle</td>
+							<td>Entregar a recepciones</td>  
+                            <td>calle 20 70 #-30 prr</td>                      
+							<td>2</td>
+							<td>20045698</td>
+							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -164,13 +173,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Rebook</td>
+                            <td>Preserntacion de marca</td>
+							<td>Sin detalle</td>
+							<td>Entregar a recepciones</td>  
+                            <td>calle 20 70 #-30 prr</td>                      
+							<td>2</td>
+							<td>20045698</td>
+							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -178,13 +188,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Koaj</td>
+                            <td>Preserntacion de marca</td>
+							<td>Sin detalle</td>
+							<td>Entregar a recepciones</td>  
+                            <td>calle 20 70 #-30 prr</td>                      
+							<td>2</td>
+							<td>20045698</td>
+							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
@@ -192,83 +203,14 @@
 						</tr>
 						<tr>
 							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-                        <tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
-							<td>
-								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
-								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>NombreApellido</td>
-                            <td>20/02/2022</td>
-							<td>Localidad o barrio</td>
-							<td>Ejemplo 24 #16 36</td>  
-                            <td>ejemplo@gmail.com</td>                      
-							<td>1123456789</td>
-                            <td>200</td>
+							<td>Avon</td>
+                            <td>Preserntacion de marca</td>
+							<td>Sin detalle</td>
+							<td>Entregar a recepciones</td>  
+                            <td>calle 20 70 #-30 prr</td>                      
+							<td>2</td>
+							<td>20045698</td>
+							<td>usuario45@gmail.com</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
