--- a/logIn.html
+++ b/logIn.html
@@ -10,7 +10,14 @@
     <link rel="stylesheet" href="styles/footer.css">
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
     <script src="script/validacion.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
+
+        <!-- Vnetana Emergente -->
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://kit.fontawesome.com/1d159cd404.js" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <!-- Ventana Emergente -->
 </head>
 <body>
   <!-- ======================================== -->
@@ -50,9 +57,28 @@
         <!-- <a href="/iniciovistagerente.html"> -->
           <input class="buttons" type="submit" name="ingresar" id="ingresar" value="Ingresar" onclick="validation()">
         <!-- </a> -->
-        <p><a href="#"  class="Link">¿Olvidastes tu Contraseña?</a></p>
+        <a href="" class=""><a href="#editEmployeeModal" class="Link" data-toggle="modal" style="float:right;font-size:12px;">Olvido su contraseña?</a></a>
       </section>
     </div>
+    <div id="editEmployeeModal" class="modal fade">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="signup-form">
+                  <form action="/examples/actions/confirmation.php" method="post">
+                      <h2>Ingresa tu Correo:)</h2>
+                      <p>Vamos a recuperar tu contreseña </p>
+                      <hr>
+                      <div class="form-group">
+                          <input id="email" type="email" class=" form-control form-control-sm" size="64" maxlength="64" required placeholder="username@gmail.com" pattern="+@beststartupever.com"/>
+                      <div class="modal-footer">
+                          <input type="button" class="btn btn-danger btn-block" data-dismiss="modal" value="Cancelar">
+                          <input type="submit" class="btn btn-danger btn-block" value="Enviar" onclick="validacionEmail()">
+                      </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
   </main>
 
   <footer class="footer">
